Changed "Shoot" to "Launch bricks"

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <canvas id="gameCanvas"></canvas>
         </div>
         <div id="info">
-            <p>The Donald has been elected! He needs your help to build that wall! Shoot at the Mexican resistance to build up your wall, catch Mexicans to prevent your wall from being destroyed! Move with arrow keys, fire with the space bar.</p>
+            <p>The Donald has been elected! He needs your help to build that wall! Launch bricks at the Mexican resistance to build up your wall, catch Mexicans to prevent your wall from being destroyed! Move with arrow keys, fire with the space bar.</p>
             <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a> | 
                 <a href="http://github.com/dwmkerr/spaceinvaders">spaceinvaders on github</a> | 
                 <a href="http://www.dwmkerr.com/experiments">more experiments</a> | <a href="http://www.dwmkerr.com">dwmkerr.com</a></p>
